<resources>
    <string name="app_name">Save and Safe</string>
    <string name="add_amount_title">Add Amount</string>
    <string name="amount_hint">1000</string>
    <string name="done_button_text">Done</string>
    <string name="tv_recents">Recents</string>
    <string name="tv_clrone_recent_title">Recents</string>
    <string name="add_item_title">Add Item</string>
    <string name="tv_add_item_name_hint">Your Item Name</string>
    <string name="tv_add_item_price_hint">100</string>
    <string name="add_item_button">Insert Item</string>
    <string name="tv_clrone_add_item_title">New Item</string>
    <string name="history_title">Your History</string>
    <string name="money_management">Money Manager</string>
    <string name="time_management">Time Manager</string>
    <string name="bt_add_task_page">Add Task</string>
    <string name="add_item_task">Add Task</string>
    <string name="tv_add_task_name_hint">Enter Task</string>
    <string name="add_task_button">Add Task</string>
    <string name="rb_one">30 Mins</string>
    <string name="rb_two">45 Mins</string>
    <string name="rb_three">60 Mins</string>
    <string name="rb_four">120 Mins</string>


</resources>
