<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fgmnt.tmmgmr.AddTaskFragment">

    <TextView
        android:id="@+id/tv_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/add_item_task"
        android:textStyle="bold"
        android:textSize="@dimen/tv_add_item_title_textSize"/>

    <EditText
        android:id="@+id/et_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/twenty_four_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_task"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text"
        android:hint="@string/tv_add_task_name_hint"
        android:paddingStart="@dimen/eight_dp"
        android:paddingEnd="@dimen/zero_dp"/>

    <RadioGroup
        android:id="@+id/rg_select_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_task_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/eight_dp">

        <RadioButton
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_one" />

        <RadioButton
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_two" />

        <RadioButton
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_three" />

        <RadioButton
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_four" />

    </RadioGroup>

    <Button
        android:id="@+id/bt_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/thirty_two_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_select_time"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/add_task_button"
        android:textSize="@dimen/bt_add_item_button_textSize"
        android:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>